chore: Javadocs and Cleanup on tests